--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -4,3 +4,8 @@ security.basic.enabled=false
 spring.datasource.url=jdbc:h2:file:./src/main/resources/db/csc3045
 spring.datasource.username=user
 spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+mybatis.typeAliasesPackage=uk.ac.qub.csc3045cs2.csc3045cs2.model
+mybatis.mapper-locations=classpath*:**/mappers/*.xml
