Zoey-Darren:Story1:All remaining functionality changes

--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.data=classpath:/db/seed.sql
 
-mybatis.typeAliasesPackage=uk.ac.qub.csc3045cs2.csc3045cs2.model
+mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
 mybatis.mapper-locations=classpath*:**/mappers/*.xml
