--- a/CSC3045-CS2-Backend/pom.xml
+++ b/CSC3045-CS2-Backend/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>mybatis-spring-boot-starter-test</artifactId>
             <version>1.3.1</version>
         </dependency>
+        
+        <dependency>
+	      <groupId>io.rest-assured</groupId>
+	      <artifactId>rest-assured</artifactId>
+	      <version>3.0.1</version>
+	      <scope>test</scope>
+	    </dependency>
     </dependencies>
 
     <build>
