--- a/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
@@ -62,7 +62,7 @@
     </ApplicationDefinition>
     <Compile Include="Exception\RestResponseErrorException.cs" />
     <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pages\test.xaml.cs">
       <DependentUpon>test.xaml</DependentUpon>
