--- a/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserStory.cs" />
+    <Compile Include="Pages\CreateUserStory.xaml.cs">
+      <DependentUpon>CreateUserStory.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
@@ -72,6 +76,7 @@
     </Compile>
     <Compile Include="Service\AuthenticationClient.cs" />
     <Compile Include="Service\ServiceClient.cs" />
+    <Compile Include="Service\UserStoryClient.cs" />
     <Compile Include="Utility\CamelCaseSerializationStrategy.cs" />
     <Compile Include="Utility\RelayCommand.cs" />
     <Page Include="MainWindow.xaml">
@@ -86,6 +91,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\CreateUserStory.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
