--- a/CSC3045-CS2-Backend/pom.xml
+++ b/CSC3045-CS2-Backend/pom.xml
@@ -62,6 +62,19 @@
             <version>1.3.1</version>
         </dependency>
         
+      
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4</version>
+	</dependency>
+	<dependency>
+		<groupId>javax</groupId>
+		<artifactId>javaee-api</artifactId>
+		<version>7.0</version>
+	</dependency>
+
+        
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
