--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8000
 security.basic.enabled=false
+logging.level.org.springframework.web=DEBUG
 
 spring.datasource.url=jdbc:h2:file:./src/main/resources/db/csc3045
 spring.datasource.username=user
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.data=classpath:/db/seed.sql
 
 mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
