--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.data=classpath:/db/seed.sql
+spring.datasource.schema=classpath:/db/schema.sql
 
 mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
 mybatis.mapper-locations=classpath*:**/mappers/*.xml
