--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:h2:file:./src/main/resources/db/csc3045
 spring.datasource.username=user
 spring.datasource.password=password
 
-#spring.datasource.schema=classpath:/db/schema.sql
-#spring.datasource.data=classpath:/db/seed.sql
+spring.datasource.schema=classpath:/db/schema.sql
+spring.datasource.data=classpath:/db/seed.sql
 
 mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
 mybatis.mapper-locations=classpath*:**/mappers/*.xml
