--- a/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Service\UserStoryClient.cs" />
     <Compile Include="Utility\CamelCaseSerializationStrategy.cs" />
     <Compile Include="Utility\Permissions.cs" />
+    <Compile Include="Utility\ProjectPermissions.cs" />
     <Compile Include="Utility\RelayCommand.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
