--- a/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Roles.cs" />
+    <Compile Include="Models\Sprint.cs" />
+    <Compile Include="Models\Task.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pages\AddProjectTeamMember.xaml.cs">
       <DependentUpon>AddProjectTeamMember.xaml</DependentUpon>
