--- a/CSC3045-CS2-Frontend/CSC3045-CS2/packages.config
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net45" />
+  <package id="gong-wpf-dragdrop" version="1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="TestStack.White" version="0.13.3" targetFramework="net45" />
