--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.data=classpath:/db/seed.sql
 
 mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
 mybatis.mapper-locations=classpath*:**/mappers/*.xml
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
