--- a/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
+++ b/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageTemplates\BasePage.cs" />
+    <Compile Include="PageTemplates\CreateSprintPage.cs" />
+    <Compile Include="PageTemplates\ManageSprintsPage.cs" />
+    <Compile Include="PageTemplates\ProjectDashboardPage.cs" />
     <Compile Include="PageTemplates\UserDashboardPage.cs" />
     <Compile Include="Tests\Authentication\Login.cs" />
     <Compile Include="Tests\Authentication\Registration.cs" />
@@ -60,6 +63,7 @@
     <Compile Include="PageTemplates\LoginPage.cs" />
     <Compile Include="PageTemplates\RegisterPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Sprints\CreateSprint.cs" />
     <Compile Include="Util\MessageBoxUtil.cs" />
   </ItemGroup>
   <ItemGroup>
