Ciaran Merge Test

--- a/CSC3045-CS2-Backend/src/main/resources/application.properties
+++ b/CSC3045-CS2-Backend/src/main/resources/application.properties
@@ -11,5 +11,10 @@ spring.datasource.data=classpath:/db/seed.sql
 
 mybatis.typeAliasesPackage=uk.ac.qub.csc3045.api.model
 mybatis.mapper-locations=classpath*:**/mappers/*.xml
-
+spring.mail.host=smtp.gmail.com
+spring.mail.username=csc3045cs2test@gmail.com
+spring.mail.password=CR8xbre8
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
