--- a/CSC3045-CS2-Backend/pom.xml
+++ b/CSC3045-CS2-Backend/pom.xml
@@ -56,7 +56,15 @@
             <artifactId>mybatis-spring-boot-starter-test</artifactId>
             <version>1.3.1</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
       
 	<dependency>
 		<groupId>javax.mail</groupId>
