--- a/CSC3045-CS2-Frontend/AutomationTests/packages.config
+++ b/CSC3045-CS2-Frontend/AutomationTests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
   <package id="TestStack.White" version="0.13.3" targetFramework="net461" />
 </packages>
