--- a/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
+++ b/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
@@ -57,10 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageTemplates\BasePage.cs" />
+    <Compile Include="PageTemplates\CreateAcceptanceTestPage.cs" />
     <Compile Include="PageTemplates\CreateSprintPage.cs" />
     <Compile Include="PageTemplates\ManageSprintsPage.cs" />
     <Compile Include="PageTemplates\ProjectDashboardPage.cs" />
     <Compile Include="PageTemplates\UserDashboardPage.cs" />
+    <Compile Include="Tests\AcceptanceTest\CreateAcceptanceTest.cs" />
     <Compile Include="Tests\Authentication\Login.cs" />
     <Compile Include="Tests\Authentication\Registration.cs" />
     <Compile Include="Tests\BaseTestClass.cs" />
