--- a/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
+++ b/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Tests\Project\ProjectDashboardManagerActions.cs" />
     <Compile Include="Tests\Project\ProjectDashboardNonManagerActions.cs" />
     <Compile Include="Tests\Sprint\CreateSprint.cs" />
+    <Compile Include="Tests\UserDashboard\UserDashboard.cs" />
     <Compile Include="Tests\UserStory\CreateUserStoryAsNonProductOwner.cs" />
     <Compile Include="Tests\UserStory\CreateUserStoryAsProductOwner.cs" />
     <Compile Include="Tests\UserStory\UserStoryDetails.cs" />
