--- a/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
+++ b/CSC3045-CS2-Frontend/AutomationTests/AutomationTests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageTemplates\BasePage.cs" />
+    <Compile Include="PageTemplates\CreateProjectPage.cs" />
     <Compile Include="PageTemplates\CreateSprintPage.cs" />
     <Compile Include="PageTemplates\ManageSprintsPage.cs" />
     <Compile Include="PageTemplates\ProjectDashboardPage.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="PageTemplates\LoginPage.cs" />
     <Compile Include="PageTemplates\RegisterPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Project\CreateProjectActions.cs" />
     <Compile Include="Tests\Project\ProjectDashboardManagerActions.cs" />
     <Compile Include="Tests\Project\ProjectDashboardNonManagerActions.cs" />
     <Compile Include="Tests\Sprint\CreateSprint.cs" />
