Darren: Fixed functionality of assign buttons and permissions for sprint dashboard

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/CSC3045-CS2.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Utility\BoolToEnabledConverter.cs" />
     <Compile Include="Utility\BoolToHiddenConverter.cs" />
     <Compile Include="Utility\CamelCaseSerializationStrategy.cs" />
+    <Compile Include="Utility\NullToVisibilityConverter.cs" />
     <Compile Include="Utility\Validation.cs" />
     <Compile Include="Utility\MessageBoxUtil.cs" />
     <Compile Include="Utility\Permissions.cs" />
